# RAG-vs-CAG-Showdown

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: app.py
dashboard/: app.py
docs/superpowers/plans/: cag-vs-rag-showdown-production-overhaul.md
frontend/: .env.example  index.html  package.json
frontend/src/: App.jsx  api.js  providers.js
frontend/src/components/: ApiKeyGate.jsx  BenchmarkPanel.jsx  Header.jsx  HealthStatus.jsx  QueryPanel.jsx  ResultsView.jsx
knowledge_base/: aiml_corpus.txt  embeddings_cache.npy
nginx/: nginx.conf
scripts/: precompute_embeddings.py
src/: config.py
src/benchmark/: evaluator.py
src/cag/: engine.py
src/rag/: engine.py
tests/: conftest.py  test_api.py  test_cag_engine.py  test_chunking.py  test_evaluator.py  test_rag_engine.py
