[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cag-vs-rag-showdown"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.3.0",
    "numpy>=1.26.0,<2.0",
    "ollama>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src", "api"]
omit = ["tests/*"]
